# convert

./: # 발라스팅 작업 상세 수치 보고서.md  # 이고르(Igor Kalachev) 메일 내용 정리 및 관련 자료 분석.md  ## 1) Executive Summary (패치 범위).PY  .gitignore  AGENTS.md  DAS HISTOR.MD  DAS_HISTOR_Organized.md  Date High Tide Window Max Height (m) Ris.tsv  DocGapMacros_v3_1.bas  INVOICE.vb  Igor_Concerns_Linkspan_Dwell_Time_Analysis.xlsx  JPT71.py  JPT71_CrossGantt_Debris8_InProgress_AutoShift.xlsx  JPT71_Interactive_Dashboard.html  JPT71_VOYAGE.csv  JPT_GRM.json  LDG_v8.2_OCR_v2.4_Linked_Full.md  OFCO 인보이스 엑셀 삽입 로직 상세 문서.MD  OFCO-INV-0002054_LDG_PAYLOAD_v2.4.json  README.md  Untitl6767d-1.csv  Untitled-1.json  Untitled-1.py  convert_jpt_grm.py  decision_flow_analysis.md  email.md  excel_helpers.py  hvdc_operations_dashboard_v3.html  lpo.html  ofco_vendor_invoice_status_report.py  option_a_dashboard_EN_PATCHED_20260119.html  subagentandskillguide.md  test_excel_functions.py  untileted.vb  update.md  update_jpt_grm.py  update_ofco_grm.py  update_tide_files_from_excel.py  validate_hydrostatic_detailed.py  validate_stability_calculations.py  (+6 more)
mrconvert_v1/cursor_only_pack_v1/: README.md  pyproject.toml
mrconvert_v1/cursor_only_pack_v1/.cursor/commands/: automate-precommit-ci.md  kpi-dash.md  rules-tune.md
mrconvert_v1/cursor_only_pack_v1/.cursor/hooks/: preload_docs.yaml
mrconvert_v1/cursor_only_pack_v1/.cursor/rules/: 100-python.mdc  active_mode.mdc  (+1 more)
mrconvert_v1/cursor_only_pack_v1/docs/: AGENT_SETUP.md
mrconvert_v1/cursor_only_pack_v1/src/: AGI Transformers Transportation_email.md  EMAILTHREAD.MD  tr.md
(+741 files in other folders)
